--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-sharing-app",
+  "name": "aj-studioz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.24.0",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "file-sharing-app": "file:",
@@ -17,7 +18,10 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.13.1",
     "mongoose": "^8.8.3",
+    "nanoid": "^5.1.6",
     "next": "15.0.3",
+    "next-auth": "^4.24.13",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
