--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nanoid": "^5.1.6",
     "next": "15.0.3",
     "next-auth": "^4.24.13",
+    "qr-code-styling": "^1.9.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
